<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context=".EditLocation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/coordinate_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/lat_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/lat_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                android:maxWidth="487dp"
                android:minHeight="48dp"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/longitude_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/long_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                android:minHeight="48dp"
                android:maxWidth="487dp"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/geocode_hint"
                android:textSize="20sp"
                android:paddingVertical="16dp"
                />

            <Button
                android:id="@+id/generate_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/geocode_btn_hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_selectors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coordinate_container">

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/location_hint" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/cancel_hint" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>